--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -111,6 +111,9 @@
       }
     }
   }
+  .home-hero--with-announcement & {
+    bottom: rem(60);
+  }
 }
 
 @keyframes heartAnimation {
@@ -225,4 +228,33 @@
   @include media-breakpoint-up(md) {
     display: block;
   }
+}
+
+.home-community__callout-statistic {
+  display: flex;
+  align-items: center;
+  background-color: $light-grey;
+  padding: rem(38) rem(20);
+}
+.home-community__callout-statistic-stat {
+  color: $iastate-maroon;
+  flex: 0 1 auto;
+  width: 40%;
+  text-align: center;
+  font-family: $merriweather;
+  font-weight: 700;
+  font-size: rem(51);
+  line-height: (51 / 51);
+  margin: 0;
+}
+.home-community__callout-statistic-description {
+  color: $iastate-maroon;
+  flex: 0 1 auto;
+  width: 60%;
+  font-family: $nimbus-sans-bold;
+  font-weight: 700;
+  font-size: rem(18);
+  line-height: (26 / 18);
+  margin: 0;
+  padding-left: rem(15);
 }
