fixing some validation issues, updating main readme

--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -24,7 +24,7 @@
       </a>
       <form class="site-header__search-form-desktop">
         <label class="visible-for-screen-readers" for="searchDesktop">Search</label>
-        <input type="search" id="searchDesktop" name="search" placeholder="Search"></input>
+        <input type="search" id="searchDesktop" name="search" placeholder="Search">
         <button type="submit"><span class="fak fa-id5-magnifying-glass"></span><span class="visible-for-screen-readers">Submit Search</span></button>
       </form>
     </div>
