--- a/src/components/pages/top-level-landing-page.twig
+++ b/src/components/pages/top-level-landing-page.twig
@@ -53,7 +53,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.</p>
       {# Right aligned image with caption #}
-      <figure role="group" class="align-right">
+      <figure class="align-right">
         <div class="media media--type-image media--view-mode-default">
           <img src="{{ "../../img/IMG_Inline_Right_FPO.jpg"|path }}" width="324" height="324" alt="">
         </div>
@@ -64,7 +64,7 @@
       <p>Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
       
       {# Left aligned image with caption #}
-      <figure role="group" class="align-left">
+      <figure class="align-left">
         <div class="media media--type-image media--view-mode-default">
           <img src="{{ "../../img/IMG_Inline_Left_FPO.jpg"|path }}" width="324" height="324" alt="">
         </div>
@@ -74,7 +74,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       
       {# Center aligned image with caption #}
-      <figure role="group" class="align-center">
+      <figure class="align-center">
         <div class="media media--type-image media--view-mode-default">
           <img src="{{ "../../img/IMG-Inline_Center_FPO.jpg"|path }}" width="736" height="451" alt="">
         </div>
