updating site header to use span instead of div in button to fix validation issue

--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -32,11 +32,11 @@
   <div class="site-header__main">
     <a href="#site-header-mega-menu" class="site-header__mega-menu-open" role="button" aria-controls="site-header-mega-menu">
       <span class="visible-for-screen-readers">Toggle Menu</span>
-      <div class="site-header__mega-menu-open-line-wrap">
+      <span class="site-header__mega-menu-open-line-wrap">
         <span></span>
         <span></span>
         <span></span>
-      </div>
+      </span>
     </a>
     <div class="site-header__mega-menu" id="site-header-mega-menu">
       <div class="site-header__mega-menu-inner">
