--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -49,7 +49,11 @@
   top: 50%;
   transform: translateY(-50%);
   .iastate22-button {
+    margin-top: rem(30);
     display: inline-block;
+    @include media-breakpoint-up(xl) {
+      margin-top: rem(55);
+    }
   }
 }
 
@@ -68,7 +72,8 @@
   @include media-breakpoint-up(xxl) {
     font-size: rem(110);
     line-height: (118 / 110);
-    width: 90%;
+    width: 100%;
+    max-width: rem(800);
   }
   span {
     color: $iastate-gold;
