updating styles for privacy-consent and privacy-toggle components

--- a/src/components/privacy-consent/privacy-consent.twig
+++ b/src/components/privacy-consent/privacy-consent.twig
@@ -3,7 +3,7 @@
         {{ body|raw }}
     </div>
     <div class="privacy-consent__buttons">
-        <button class="button privacy-consent__accept" type="button">Accept</button>
-        <button class="button privacy-consent__decline" type="button">Decline</button>
+        <button class="iastate22-button iastate22-button--reverse privacy-consent__accept" type="button">Accept<span class="arrow"></span></button>
+        <button class="iastate22-button iastate22-button--reverse privacy-consent__decline" type="button">Decline<span class="arrow"></span></button>
     </div>
 </div>
