--- a/src/components/privacy-consent/_privacy-consent.scss
+++ b/src/components/privacy-consent/_privacy-consent.scss
@@ -1,5 +1,6 @@
 .privacy-consent {
-  background-color: #fff;
+  background-color: $iastate-maroon;
+  color: $white;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   padding: rem(24);
   position: fixed;
@@ -13,8 +14,16 @@
   }
 }
 
+.privacy-consent__content {
+  a {
+    color: $iastate-gold;
+  }
+}
+
 .privacy-consent__buttons {
+  margin-top: rem(10);
   .iastate22-button {
+    display: inline-block;
     &:not(:last-child) {
       margin-right: rem(10);
     }
