--- a/src/components/privacy-toggle/_privacy-toggle.scss
+++ b/src/components/privacy-toggle/_privacy-toggle.scss
@@ -1,143 +1,147 @@
-//adapted from https://adrianroselli.com/2019/08/under-engineered-privacy-toggle-too.html
+.privacy-toggle {
+  background-color: $iastate-maroon;
+  color: $white;
+  padding: rem(20) rem(30);
+}
 
 .privacy-toggle [aria-pressed] {
-    display: block;
-    box-sizing: border-box;
-    border: none;
-    color: inherit;
-    background: none;
-    font: inherit;
-    line-height: inherit;
-    text-align: left;
-    padding: 0.4em 0 0.4em 4em;
-    position: relative;
+  display: block;
+  box-sizing: border-box;
+  border: none;
+  color: inherit;
+  background: none;
+  font: inherit;
+  line-height: inherit;
+  text-align: left;
+  padding: 0.4em 0 0.4em 4em;
+  position: relative;
 }
 
 .privacy-toggle [aria-pressed][disabled],
 .privacy-toggle [aria-pressed][disabled]:hover {
-    color: #999;
+  color: #999;
 }
 
 .privacy-toggle [aria-pressed]:focus,
 .privacy-toggle [aria-pressed]:hover {
-    color: #00f;
-    outline: none;
-    cursor: pointer;
+  color: $white;
+  outline: none;
+  cursor: pointer;
 }
 
 .privacy-toggle [aria-pressed]:focus::before,
 .privacy-toggle [aria-pressed]:hover::before {
-    box-shadow: 0 0 0.5em #333;
+  box-shadow: 0 0 0.5em #333;
 }
 
 .privacy-toggle [aria-pressed]:focus::after,
 .privacy-toggle [aria-pressed]:hover::after {
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='50' fill='rgba(0,0,0,.25)'/%3E%3C/svg%3E");
-    background-size: 30%;
-    background-repeat: no-repeat;
-    background-position: center center;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='50' fill='rgba(0,0,0,.25)'/%3E%3C/svg%3E");
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .privacy-toggle [aria-pressed]::before,
 .privacy-toggle [aria-pressed]::after {
-    content: "";
-    position: absolute;
-    height: 1.5em;
-    transition: all 0.25s ease;
+  content: "";
+  position: absolute;
+  height: 1.5em;
+  transition: all 0.25s ease;
 }
 
 .privacy-toggle [aria-pressed]::before {
-    left: 0;
-    top: 0.2em;
-    width: 3em;
-    border: 0.2em solid #767676;
-    background: #767676;
-    border-radius: 1.1em;
+  left: 0;
+  top: 0.2em;
+  width: 3em;
+  border: 0.2em solid #767676;
+  background: #767676;
+  border-radius: 1.1em;
 }
 
 .privacy-toggle [aria-pressed]::after {
-    left: 0;
-    top: 0.25em;
-    background-color: #fff;
-    background-position: center center;
-    border-radius: 50%;
-    width: 1.5em;
-    border: 0.15em solid #767676;
+  left: 0;
+  top: rem(3.5);
+  background-color: #fff;
+  background-position: center center;
+  border-radius: 50%;
+  width: 1.5em;
+  border: 0.15em solid #767676;
 }
 
 .privacy-toggle [aria-pressed="true"]::after {
-    left: 1.6em;
-    border-color: #36a829;
-    color: #36a829;
+  left: 1.6em;
+  border-color: #36a829;
+  color: #36a829;
 }
 
 .privacy-toggle [aria-pressed="true"]::before {
-    background-color: #36a829;
-    border-color: #36a829;
+  background-color: #36a829;
+  border-color: #36a829;
 }
 
 .privacy-toggle [aria-pressed][disabled]::before {
-    background-color: transparent;
-    border-color: #ddd;
+  background-color: transparent;
+  border-color: #ddd;
 }
 
 .privacy-toggle [aria-pressed][disabled]::after {
-    border-color: #ddd;
+  border-color: #ddd;
 }
 
 .privacy-toggle [aria-pressed][disabled]:hover {
-    color: #999; /* case for CSS custom property if not supporting IE/Edge */
+  color: #999; /* case for CSS custom property if not supporting IE/Edge */
 }
 
 .privacy-toggle [aria-pressed][disabled]:hover::before {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .privacy-toggle [aria-pressed][disabled]:hover::after {
-    background-image: none;
+  background-image: none;
 }
 
 /* Put privacy-toggle on the right like the iOS the kids like */
 
 .privacy-toggle.flip [aria-pressed]::before,
 .privacy-toggle.flip [aria-pressed]::after {
-    left: auto;
-    right: 0;
+  left: auto;
+  right: 0;
 }
 
 .privacy-toggle.flip [aria-pressed]::after {
-    left: auto;
-    right: 1.6em;
+  left: auto;
+  right: 1.6em;
 }
 
 .privacy-toggle.flip [aria-pressed="true"]::after {
-    right: 0;
+  right: 0;
 }
 
 .privacy-toggle.flip [aria-pressed] {
-    padding-left: 0;
-    padding-right: 4em;
+  padding-left: 0;
+  padding-right: 4em;
 }
 
 /* Windows High Contrast Mode Support */
 @media screen and (-ms-high-contrast: active) {
-    .privacy-toggle [aria-pressed]:focus::before,
-    .privacy-toggle [aria-pressed]:hover::before {
-        outline: 1px dotted windowText;
-        outline-offset: 0.25em;
-    }
-    .privacy-toggle [aria-pressed]::after {
-        background-color: windowText;
-    }
-    .privacy-toggle [aria-pressed][disabled]::after {
-        background-color: transparent;
-    }
+  .privacy-toggle [aria-pressed]:focus::before,
+  .privacy-toggle [aria-pressed]:hover::before {
+    outline: 1px dotted windowText;
+    outline-offset: 0.25em;
+  }
+  .privacy-toggle [aria-pressed]::after {
+    background-color: windowText;
+  }
+  .privacy-toggle [aria-pressed][disabled]::after {
+    background-color: transparent;
+  }
 }
 
 /* Reduced motion */
 @media screen and (prefers-reduced-motion: reduce) {
-    .privacy-toggle [aria-pressed]::before,
-    .privacy-toggle [aria-pressed]::after {
-        transition: none;
-    }
+  .privacy-toggle [aria-pressed]::before,
+  .privacy-toggle [aria-pressed]::after {
+    transition: none;
+  }
 }
