--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -252,6 +252,7 @@
 
 .home-community__callout-content-wrap {
   margin-top: rem(45);
+  order: 2;
 }
 
 .home-community__callout-headline {
@@ -266,6 +267,7 @@
 .home-community__callout-media {
   @extend %responsive-img;
   box-shadow: 0 rem(12) rem(24) rgba($black, 0.2);
+  order: 3;
   &:before {
     padding-top: 77.49%;
   }
@@ -283,6 +285,20 @@
   align-items: center;
   background-color: $light-grey;
   padding: rem(38) rem(20);
+  position: relative;
+  margin: 0 auto;
+  max-width: rem(342);
+  order: 1;
+  &:before {
+    content: "";
+    border-bottom: rem(8) solid $iastate-gold;
+    top: rem(-4);
+    left: 50%;
+    margin-left: rem(-28);
+    width: rem(56);
+    height: rem(8);
+    position: absolute;
+  }
 }
 .home-community__callout-statistic-stat {
   color: $iastate-maroon;
@@ -305,4 +321,26 @@
   line-height: (26 / 18);
   margin: 0;
   padding-left: rem(15);
+}
+
+// Home Blockquote Section
+.home-iastate22-blockquote {
+  .iastate22-blockquote__portrait {
+    cursor: pointer;
+  }
+  .iastate22-modal__container {
+    padding: rem(45) 0 0 0;
+    width: 100%;
+    max-width: rem(1000);
+  }
+  .iastate22-modal__media {
+    &:before {
+      display: none;
+    }
+  }
+  .video-embed__media-wrap {
+    &:after {
+      display: none;
+    }
+  }
 }
