--- a/src/components/pages/home.twig
+++ b/src/components/pages/home.twig
@@ -47,3 +47,30 @@
     </div>
   </div>
 </div>
+
+{# Homepage blockquote is different from standard blockquote component as it contains a video modal #}
+<div class="home-iastate22-blockquote iastate22-blockquote{% if home_blockquote.portrait %} iastate22-blockquote--with-image{% else %} iastate22-blockquote--with-no-image{% endif %}">
+  <div class="iastate22-blockquote__inner-wrap">
+    {% if home_blockquote.portrait %}
+    <div class="iastate22-blockquote__portrait" data-micromodal-trigger="{{ home_blockquote.modal.id }}">
+      <img src="{{ home_blockquote.portrait|path }}" alt="" />
+    </div>
+    {% endif %}
+    <div class="iastate22-blockquote__text-wrap">
+      <h2 class="iastate22-blockquote__quote">{{ home_blockquote.quote }}</h2>
+      {% if home_blockquote.author %}
+      <p class="iastate22-blockquote__author">{{ home_blockquote.author }}{% if home_blockquote.author_role %}, {{home_blockquote.author_role}}{% endif %}</p>
+      {% endif %}
+    </div>
+  </div>
+  <div class="iastate22-modal" id="{{ home_blockquote.modal.id }}" aria-hidden="false">
+    <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="iastate22-modal__container{% if home_blockquote.modal.image %} iastate22-modal__container-with-media{% endif %}" id="{{ home_blockquote.modal.id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ home_blockquote.modal.id }}-title">
+        <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark"></i></button>
+        <div class="iastate22-modal__media">
+          {% include "@video-embed" with home_blockquote.modal.video %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
