--- a/src/components/card/card--linked-image.twig
+++ b/src/components/card/card--linked-image.twig
@@ -2,5 +2,5 @@
   <div class="iastate22-card__media">
 		<img src="{{ image|path }}" alt="">
 	</div>
-  <a class="iastate22-card__cta" href="{{ cta.url }}">{{ cta.text }}</a>
+  <a class="iastate22-card__cta" href="{{ cta.url }}">{{ cta.text }}<span class="arrow"></span></a>
 </div>
