--- a/src/components/card/card--profile-with-modal.twig
+++ b/src/components/card/card--profile-with-modal.twig
@@ -1,14 +1,11 @@
-<div class="iastate22-card"{% if clickable is defined %} data-clickable="{{ clickable }}"{% endif %}>
-  {% if image %}
+<div class="iastate22-card iastate22-card--profile-with-modal"{% if clickable is defined %} data-clickable="{{ clickable }}"{% endif %}>
   <div class="iastate22-card__media">
 		<img src="{{ image|path }}" alt="">
 	</div>
-  {% endif %}
 	<div class="iastate22-card__content">
 		<h2 class="iastate22-card__title"><a href="{{url}}">{{ title }}</a></h2>
-		<div class="iastate22-card__body">
-			{{ body|raw }}
-		</div>
+		<div class="iastate22-card__name"><p>{{ name }}</p></div>
+    <div class="iastate22-card__role"><p>{{ role }}</p></div>
 		{% if cta.url %}
 			{% if cta.text %}
 				<a href="{{ cta.url }}" class="iastate22-card__cta">{{ cta.text }}</a>
