--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -202,8 +202,17 @@
 
 // Home Community Section
 .home-community {
-  padding: rem(37);
+  @extend %outer-pad-x;
+  @include media-breakpoint-up(lg) {
+    padding-top: rem(50);
+  }
 }
+
+.home-community__content-wrap {
+  margin: 0 auto;
+  max-width: rem(842);
+}
+
 .home-community__label {
   font-family: $nimbus-sans-bold;
   font-weight: 700;
@@ -212,6 +221,11 @@
   line-height: (30 / 21);
   text-align: center;
   position: relative;
+  @include media-breakpoint-up(lg) {
+    font-size: rem(22);
+    line-height: (31 / 22);
+    margin-bottom: rem(13);
+  }
   &:before,
   &:after {
     content: "";
@@ -235,6 +249,12 @@
   margin-top: rem(22);
   margin-bottom: 0;
   padding-bottom: 0;
+  @include media-breakpoint-up(lg) {
+    font-size: rem(53);
+    line-height: (66 / 53);
+    width: 50%;
+    margin: 0 auto rem(22);
+  }
 }
 
 .home-community__body {
@@ -242,17 +262,41 @@
   color: $iastate-maroon;
   line-height: (29 / 18);
   margin-top: rem(15);
+  @include media-breakpoint-up(lg) {
+    font-size: rem(21);
+    line-height: (33 / 21);
+  }
 }
 
 .home-community__callout {
   display: flex;
   flex-direction: column-reverse;
   margin-top: rem(37);
+  @include media-breakpoint-up(md) {
+    flex-direction: row-reverse;
+  }
 }
 
 .home-community__callout-content-wrap {
   margin-top: rem(45);
   order: 2;
+  @include media-breakpoint-up(md) {
+    order: initial;
+    flex: 0 1 auto;
+    width: 25%;
+  }
+}
+
+.home-community__callout-media-statistic-wrap {
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+  }
 }
 
 .home-community__callout-headline {
@@ -268,8 +312,16 @@
   @extend %responsive-img;
   box-shadow: 0 rem(12) rem(24) rgba($black, 0.2);
   order: 3;
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 40%;
+    order: initial;
+  }
   &:before {
     padding-top: 77.49%;
+    @include media-breakpoint-up(md) {
+      padding-top: 66.73%;
+    }
   }
 }
 
@@ -277,6 +329,15 @@
   display: none;
   @include media-breakpoint-up(md) {
     display: block;
+    flex: 0 1 auto;
+    width: 40%;
+    order: 1;
+  }
+  @extend %responsive-img;
+  &:before {
+    @include media-breakpoint-up(md) {
+      padding-top: 60.67%;
+    }
   }
 }
 
@@ -290,6 +351,12 @@
   max-width: rem(342);
   order: 1;
   z-index: 1;
+  @include media-breakpoint-up(md) {
+    order: initial;
+    margin: 0;
+    display: block;
+    text-align: center;
+  }
 
   &:before {
     content: "";
@@ -312,6 +379,9 @@
   font-size: rem(51);
   line-height: (51 / 51);
   margin: 0;
+  @include media-breakpoint-up(md) {
+    width: 100%;
+  }
 }
 .home-community__callout-statistic-description {
   color: $iastate-maroon;
@@ -323,15 +393,16 @@
   line-height: (26 / 18);
   margin: 0;
   padding-left: rem(15);
+  @include media-breakpoint-up(md) {
+    width: 100%;
+    padding-left: 0;
+  }
 }
 
 // Home Blockquote Section
 .home-iastate22-blockquote {
   padding-top: rem(241);
   padding-bottom: rem(80);
-  .iastate22-blockquote__portrait {
-    cursor: pointer;
-  }
   .iastate22-modal__container {
     padding: rem(45) 0 0 0;
     width: 100%;
@@ -340,6 +411,10 @@
   .iastate22-blockquote__portrait {
     max-width: none;
     width: 75%;
+    cursor: pointer;
+    @include media-breakpoint-up(xl) {
+      max-width: rem(258);
+    }
   }
   .video-embed__button {
     top: 78%;
@@ -449,6 +524,12 @@
   margin-top: rem(47);
 }
 
+.home-solutions__carousel {
+  @include media-breakpoint-up(lg) {
+    display: flex;
+  }
+}
+
 .home-solutions__carousel-slide {
   width: 66%;
   margin-right: rem(40);
@@ -460,10 +541,17 @@
 // home location section
 .home-location {
   position: relative;
+  @include media-breakpoint-up(lg) {
+    padding-left: rem(79);
+    padding-right: rem(79);
+  }
 }
 
 .home-location__media {
   @extend %responsive-img;
+  @include media-breakpoint-up(lg) {
+    border: rem(10) solid $iastate-gold;
+  }
 
   &:before {
     padding-top: 55.56%;
@@ -475,11 +563,22 @@
   padding: rem(33) rem(36);
   position: relative;
   z-index: 1;
+  @include media-breakpoint-up(lg) {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: rem(81);
+    max-width: rem(432);
+  }
   .fa-location-dot {
     color: $iastate-gold;
     position: absolute;
     font-size: rem(48);
     top: rem(-27);
+    @include media-breakpoint-up(lg) {
+      position: relative;
+      top: 0;
+    }
   }
 }
 
@@ -498,6 +597,115 @@
     transition: 0.2s color ease-in-out;
     &:hover {
       color: $white;
+    }
+  }
+}
+
+// home social section
+.home-social {
+  background-color: $iastate-red;
+  @extend %outer-pad-x;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.home-social__headline-icons-wrap {
+  margin: rem(40) 0 rem(26);
+}
+
+.home-social__headline {
+  color: $white;
+  width: 50%;
+  padding: 0;
+  margin-bottom: rem(20);
+}
+
+.home-social__social-links {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: rem(27) 0;
+  @include media-breakpoint-up(md) {
+    justify-content: flex-start;
+  }
+  @include media-breakpoint-up(xl) {
+    margin: 0;
+    justify-content: flex-end;
+  }
+  li {
+    margin-right: rem(15);
+    @include media-breakpoint-up(md) {
+      margin-right: rem(30);
+    }
+    a {
+      border: rem(2) solid $iastate-gold;
+      border-radius: 50%;
+      width: rem(52);
+      height: rem(52);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $white;
+      transition: 0.2s background-color ease-in-out;
+      &:hover {
+        background-color: $iastate-maroon;
+      }
+      svg {
+        color: $iastate-gold;
+        font-size: rem(25);
+      }
+    }
+  }
+}
+
+.home-social__images-wrap {
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: rem(-36);
+    right: rem(-36);
+    background-color: $white;
+    height: rem(48);
+  }
+}
+
+.home-social__images-image {
+  @extend %responsive-img;
+  box-shadow: 0 rem(13) rem(16) rgba($black, 0.2);
+  &:nth-child(2),
+  &:last-child {
+    display: none;
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
+  }
+  &:before {
+    padding-top: 100%;
+  }
+}
+
+// home full width campus photo section
+.home-full-width-campus-photo {
+  @extend %responsive-img;
+
+  &:before {
+    padding-top: 114.49%;
+    @include media-breakpoint-up(sm) {
+      padding-top: 45.83%;
+    }
+  }
+  .home-full-width-campus-photo__desktop {
+    display: none;
+    @include media-breakpoint-up(sm) {
+      display: block;
+    }
+  }
+
+  .home-full-width-campus-photo__mobile {
+    @include media-breakpoint-up(sm) {
+      display: none;
     }
   }
 }
